<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_poster_detail"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/genre_detail"
            app:layout_constraintTop_toBottomOf="@+id/img_poster_detail"
            tools:layout_editor_absoluteX="16dp"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/genre_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="#1E1E1E"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/title_detail"
            tools:layout_editor_absoluteX="16dp"
            tools:text="@string/genre" />

        <TextView
            android:id="@+id/release_detail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:textAlignment="center"
            android:textColor="#1E1E1E"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre_detail"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="#1E1E1E"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toStartOf="@+id/release_detail"
            app:layout_constraintHorizontal_bias="0.409"
            app:layout_constraintStart_toStartOf="@+id/genre_detail"
            app:layout_constraintTop_toBottomOf="@+id/genre_detail" />

        <TextView
            android:id="@+id/ph_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:textColor="#1E1E1E"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/release_detail"
            app:layout_constraintTop_toBottomOf="@+id/release_detail"
            tools:text="PH" />

        <TextView
            android:id="@+id/ph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/production"
            android:textAlignment="center"
            android:textColor="#1E1E1E"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toStartOf="@+id/ph_detail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/release"
            app:layout_constraintTop_toBottomOf="@+id/release" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/overview"
            android:textAlignment="center"
            android:textColor="#1E1E1E"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ph_detail" />

        <TextView
            android:id="@+id/desc_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:textColor="#1E1E1E"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc"
            tools:text="@string/overview" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>